tests/test_struct/bad/empty_struct.catala_en
## Test

```catala
declaration structure Foo:

declaration scope Bar:
  internal foo content Foo
```

```catala-test-inline
$ catala Typecheck 
[ERROR]
The struct Foo does not have any fields; give it some for Catala to be able to accept it.

┌─⯈ empty_struct.catala_en:4.23-4.26:
└─┐
4 │ declaration structure Foo:
  │                       ‾‾‾
  └─ Test
#return code 123#
```
